[package]
name = "takeover"
version = "0.1.0"
authors = ["James Meek <james@jamz.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-preview = { version = "=0.3.0-alpha.19", features = ["async-await"] }
tokio = { version = "1.0.1", features = ["full"] }
tokio-codec = "0.2.0-alpha"

chrono = "0.4.9"
image = "0.22.3"
get_if_addrs = "0.5.3"

serde = "1.0.101"
serde_json = "1.0.40"
serde_derive = "1.0.101"

net2 =  "0.2.37"
rand = "0.7.2"
